gungraun/tests/ui/lib_bench/test_library_benchmark_invalid_bench_arguments_key_value.stderr
error: Invalid parameter: invalid

         = help: Valid parameters are: `args`, `consts`, `config`, `setup`, `teardown`

 --> tests/ui/lib_bench/test_library_benchmark_invalid_bench_arguments_key_value.rs:4:13
  |
4 | #[bench::id(invalid = "value")]
  |             ^^^^^^^^^^^^^^^^^

error: Invalid value for `args`

         = help: `args` must be a tuple or array whose elements match the benchmark function's parameters
         = note: #[bench::id(args = (1, 2))]  // tuple
                 #[bench::id(args = [1, 2])]  // array

 --> tests/ui/lib_bench/test_library_benchmark_invalid_bench_arguments_key_value.rs:8:20
  |
8 | #[bench::id(args = "value")]
  |                    ^^^^^^^
